force-app/main/default/objects/OpportunityLineItem/fields/QOH__c.field-meta.xml
<CustomField>
    <fullName>QOH__c</fullName>
    <description>Use to show check inventory</description>
    <label>QOH</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>