force-app/main/default/objects/OpportunityLineItem/fields/Total_Amount_Original__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Original__c</fullName>
    <formula>ListPrice * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Original</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>